bandeau et footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,26 @@
   </head>
 
   <body>
+    <div class="bandeau">
+      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+        </a>&nbsp;&nbsp;</span>
+      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+        </a>&nbsp;&nbsp;</span>
+      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+        </a>&nbsp;&nbsp;</span>
+      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+        </a>&nbsp;&nbsp;</span>
+      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+        </a>&nbsp;&nbsp;</span>
+    </div>
+
     <header class="flex-col-center">
+
       <h1>CHANTS DES RAPACES NOCTURNES D'EUROPE</h1>
       <h2>
         <span>! Ne diffusez pas ces sons en pleine nature !</span>
@@ -88,7 +107,7 @@
         </div>
 
         <div class="audio">
-          <audio controls="controls" preload="metadata" src="Hibou-Moyen-Duc-Male.mp3"></audio>
+          <audio controls="controls" preload="metadata" src="Hibou-Moyen-Duc-Famille.mp3"></audio>
           <div class="hide-right  duc">
             <p>HIBOU MOYEN-DUC</p>
           </div>
@@ -137,6 +156,16 @@
 
       </div>
     </main>
+
+    <footer>
+      <div>
+        <span>&#169; 2023
+        </span>
+        <a href="https://fanny-andreo.fr/" target="_blank">Fanny Andreo</a>
+      </div>
+      <a href="https://www.lpo.fr/" target="_blank"><img src="Logo-LPO.png" alt="logo LPO"></a>
+
+    </footer>
 
   </body>
 
