footer plus grand

--- a/index.html
+++ b/index.html
@@ -13,29 +13,31 @@
   </head>
 
   <body>
-    <div class="bandeau">
-      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
-        </a>&nbsp;&nbsp;</span>
-      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
-        </a>&nbsp;&nbsp;</span>
-      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
-        </a>&nbsp;&nbsp;</span>
-      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
-        </a>&nbsp;&nbsp;</span>
-      <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-          <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
-        </a>&nbsp;&nbsp;</span>
+
+      <div class="bandeau">
+        <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+          </a>&nbsp;</span>
+        <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+          </a>&nbsp;</span>
+        <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+          </a>&nbsp;</span>
+        <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+          </a>&nbsp;</span>
+        <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+          </a>&nbsp;</span>
+          
     </div>
 
     <header class="flex-col-center">
 
       <h1>CHANTS DES RAPACES NOCTURNES D'EUROPE</h1>
       <h2>
-        <span>! Ne diffusez pas ces sons en pleine nature !</span>
+        <span>! Ne diffusez pas ces sons en milieu naturel !</span>
         Vous risquez de perturber la faune locale !
         <a href="https://www.nature-isere.fr/temoignages-et-actus/actualites/utilisation-de-la-repasse-et-recommandations-de-la-lpo" target="_blank">Plus d'infos</a>
       </h2>
@@ -158,7 +160,7 @@
     </main>
 
     <footer>
-      <div>
+      <div class="credits">
         <span>&#169; 2023
         </span>
         <a href="https://fanny-andreo.fr/" target="_blank">Fanny Andreo</a>
