Pas de lien sur mon nom

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 
     <footer>
       <div class="credits">
-        <span>&#169; 2023
+        <span>&#169; 2023 Fanny Andreo
         </span>
-        <a href="https://fanny-andreo.fr/" target="_blank">Fanny Andreo</a>
+        <!-- <a href="https://fanny-andreo.fr/" target="_blank">Fanny Andreo</a> -->
       </div>
       <a href="https://www.lpo.fr/" target="_blank"><img src="Logo-LPO.png" alt="logo LPO"></a>
 
