lien script stats

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="soundwave.png">
     <link rel="stylesheet" href="style.css">
-
-    <script defer="defer" src="show_img.js"></script>
+    
+    <script src="stats.js" type="text/javascript"></script>
 
     <title>Cris Rapaces Nocturnes</title>
   </head>
