--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     
     <script src="stats.js" type="text/javascript"></script>
+    <script defer=defer src="getYear.js" type="text/javascript"></script>
+
 
     <title>Cris Rapaces Nocturnes</title>
   </head>
@@ -161,7 +163,7 @@
 
     <footer>
       <div class="credits">
-        <span>&#169; 2023 Fanny Andreo
+        <span id="credits">
         </span>
         <!-- <a href="https://fanny-andreo.fr/" target="_blank">Fanny Andreo</a> -->
       </div>
