aria-label sur les links

--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
   <body>
 
       <div class="bandeau">
+        
+          <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank" aria-label="Adherez à la LPO">Devenez Adhérent LPO</strong>
+          </a></span>
         <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank" aria-label="Adherez à la LPO">Devenez Adhérent LPO</strong>
           </a>&nbsp;</span>
         <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank" aria-label="Adherez à la LPO">Devenez Adhérent LPO</strong>
           </a>&nbsp;</span>
         <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank" aria-label="Adherez à la LPO">Devenez Adhérent LPO</strong>
           </a>&nbsp;</span>
         <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
-          </a>&nbsp;</span>
-        <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
-            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank">Devenez Adhérent LPO</strong>
+            <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank" aria-label="Adherez à la LPO">Devenez Adhérent LPO</strong>
           </a>&nbsp;</span>
           
     </div>
