--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
           <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
             <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank" aria-label="Adherez à la LPO">Devenez Adhérent LPO</strong>
-          </a></span>
+          </a>&nbsp;</span>
         <span>Soutenez des Actions en faveur de la Biodiversité. &nbsp;<strong>
             <a href="https://www.lpo.fr/s-engager-a-nos-cotes/adherer-a-l-association" target="_blank" aria-label="Adherez à la LPO">Devenez Adhérent LPO</strong>
           </a>&nbsp;</span>
